--- a/JavaChat/FrontEnd/index.html
+++ b/JavaChat/FrontEnd/index.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-        <div class="container">
+    <div class="bg-container">
+        <img src="./images/chautara.jpg" alt="Background Image">
+    </div>
 
+    <div class="container">
             <!-- Login page form -->
             <div class="form-box login">
                 <form action="">
