--- a/JavaChat/FrontEnd/index.html
+++ b/JavaChat/FrontEnd/index.html
@@ -69,11 +69,17 @@
             <!-- for toggle -->
             <div class="toggle-box">
                 <div class="toggle-panel toggle-left">
+                    <div class="logo-container">
+                        <img src="./images/Chautari_nobg.png" alt="Chautara Logo">
+                    </div>
                     <h1>Hello, Welcome</h1>
                     <p>Don't have an account?</p>
                     <button class="btn register-btn">Register</button>
                 </div>
                 <div class="toggle-panel toggle-right">
+                    <div class="logo-container">
+                        <img src="./images/Chautari_nobg.png" alt="Chautara Logo">
+                    </div>
                     <h1>Welcome Back!</h1>
                     <p>Already have an account?</p>
                     <button class="btn login-btn">Login</button>
