--- a/JavaChat/FrontEnd/LoginPage/login.html
+++ b/JavaChat/FrontEnd/LoginPage/login.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chautara</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./login.css">
 </head>
 
 <body>
     <div class="bg-container">
-        <img src="./images/chautara.jpg" alt="Background Image">
+        <img src="../images/chautara.jpg" alt="Background Image">
     </div>
 
     <div class="container">
@@ -70,7 +70,7 @@
             <div class="toggle-box">
                 <div class="toggle-panel toggle-left">
                     <div class="logo-container">
-                        <img src="./images/Chautari_nobg.png" alt="Chautara Logo">
+                        <img src="../images/Chautari_nobg.png" alt="Chautara Logo">
                     </div>
                     <h1>Hello, Welcome</h1>
                     <p>Don't have an account?</p>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="toggle-panel toggle-right">
                     <div class="logo-container">
-                        <img src="./images/Chautari_nobg.png" alt="Chautara Logo">
+                        <img src="../images/Chautari_nobg.png" alt="Chautara Logo">
                     </div>
                     <h1>Welcome Back!</h1>
                     <p>Already have an account?</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </div>
-    <script src="script.js"></script>
+    <script src="./login.js"></script>
 </body>
 
 </html>
