--- a/JavaChat/public/index.html
+++ b/JavaChat/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Chautara</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./login.css">
@@ -28,7 +28,7 @@
                     <h1>Login</h1>
 
                     <div class="input-box">
-                        <input type="text" placeholder="Username" required>
+                        <input type="email" placeholder="Email" required>
                         <i class='bx bxs-user'></i>
                     </div>
 
@@ -47,9 +47,9 @@
 
                     <div class="social-icons">
                         <!-- Google login button -->
-                         <i class='bx bxl-google'></i>
+                        <i class='bx bxl-google'></i>
                         <button type="button" id="google-login-btn" class="btn social-btn">
-                             Login with Google
+                            Login with Google
                         </button>
                     </div>
                 </form>
@@ -81,9 +81,9 @@
 
                     <div class="social-icons">
                         <!-- Google register button -->
-                         <i class='bx bxl-google' ></i>
+                        <i class='bx bxl-google'></i>
                         <button type="button" id="google-register-btn" class="btn social-btn">
-                             Register with Google
+                            Register with Google
                         </button>
                     </div>
                 </form>
@@ -111,16 +111,31 @@
             </div>
 
         </div>
-
     </div>
 
 
+    <!-- USERNAME SETUP MODAL -->
+    <div id="username-modal" style="position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:9999;">
+        <div class="modal-card"
+            style="margin:0 auto; padding:24px; background:#fff; border-radius:8px; width:320px; box-shadow:0 6px 18px rgba(0,0,0,0.2); margin-top:8vh;">
+            <h2 style="margin-top:0">Choose a username</h2>
+            <p style="margin:6px 0 12px 0; font-size:13px; color:#444">This will be your public name on Chautara.
+                Lowercase letters, numbers, underscores allowed.</p>
+            <input id="username-input" type="text" placeholder="username"
+                style="width:100%; padding:8px; font-size:16px; margin-bottom:8px; box-sizing:border-box;">
+            <div style="display:flex; gap:8px;">
+                <button id="username-save-btn" class="btn" style="flex:1">Save</button>
+                <button id="username-cancel-btn" class="btn" style="flex:1; background:#eee; color:#111">Cancel</button>
+            </div>
+            <p id="username-error" style="color:#b00020; font-size:13px; margin-top:8px; min-height:18px;"></p>
+        </div>
+    </div>
+
     <!-- Chat System -->
-
-
     <div class="chat-system" id="chat-system" style="display:none">
-        <div class="top-section">
+        <div class="top-section" style="position:relative;">
             <h1>Chautara</h1>
+            <button id="logout-btn" style="position:absolute; right:16px; top:12px; padding:8px 12px;">Logout</button>
         </div>
         <div class="bottom-section">
             <div class="left-bar">
@@ -130,62 +145,24 @@
                             <img src="images/Chautari_nobg.png" alt="logo">
                         </div>
                     </div>
-                    <div class="friend-section">
-
-                    </div>
+                    <div class="friend-section"></div>
                 </div>
                 <div class="left-bottom">
-                    <div class="profile-info">
-
-                    </div>
+                    <div class="profile-info"></div>
                 </div>
-
-
             </div>
             <div class="right-bar">
-                <div class="right-top">
-
-                </div>
+                <div class="right-top"></div>
                 <div class="right-bottom">
-                    <div class="chat-section">
-
-                    </div>
-                    <div class="online-section">
-
-                    </div>
+                    <div class="chat-section"></div>
+                    <div class="online-section"></div>
                 </div>
-
             </div>
         </div>
     </div>
 
-
-    <!-- FireBase Configuration -->
-
-    <script src="./login.js"></script> <!-- Javascript Source -->
-    <script type="module"> //FireBase Configuration
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-            apiKey: "AIzaSyCf834zOmx_cZRpGVERQBRKKoz75eQuzQg",
-            authDomain: "chautara-chat.firebaseapp.com",
-            projectId: "chautara-chat",
-            storageBucket: "chautara-chat.firebasestorage.app",
-            messagingSenderId: "721377984762",
-            appId: "1:721377984762:web:d78febb64826c4ee8a0943",
-            measurementId: "G-EJY8WBD90D"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-    </script>
+    <!-- Single combined JS file (firebase + handlers) -->
+    <script src="./login.js" type="module"></script>
 </body>
 
 </html>
